🎨 🐛 Shamelessly add a bunch of string helpers I've been craving and use them everywhere
🐛 Fix a bug for spells where a range of eg 50 would get represented as "50 foot" instead of "50 feet"
🐛 Fix a bug where Immunities/Resistances/Weaknesses would get listed in the wrong order - this is probably due to a previous change I made, where I didn't think of Map.of not preserving the insertion order
🐛 Fix a bug where HpHardnessBt was formatted incorrectly with spaces before semicolons when there were no associated notes

This is a pretty far-reaching change, so I tested it by doing the following:
1. Ran tests while checked out to upstream/main
2. Move target/test-pf2 to target/test-base-pf2e
3. Ran tests while checked out to this branch (with the changes for the two above bugs reverted)
4. Ran `diff -BburZ test-base-pf2 test-pf2` to compare differences